--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,29 @@
     padding: 0;
     margin: 0;
 }
+
+
+.container{
+    max-width: 1280px;
+    margin: auto;
+}
+@media only screen and (max-width: 768px) {
+    .container{
+        padding: 0 12px;
+    }
+}
+.d-flex{
+    display: flex;
+}
+.space-between{
+    justify-content: space-between;
+}
+.align-item{
+    align-items: center;
+}
+.d-block{
+    display: block;
+}
+.w-100{
+   width: 100%;
+}
