--- a/css/vlad27171.css
+++ b/css/vlad27171.css
@@ -7,7 +7,7 @@
     padding: 4px 12px;
     background: #EDEBF7;
     border-radius: 24px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -17,7 +17,7 @@
     width: 124px;
 }
 .how_it_works .how_it_works_first h3{
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
@@ -27,7 +27,7 @@
     padding: 26px 0 28px 0;
 }
 .how_it_works .how_it_works_first p:last-of-type{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -40,6 +40,7 @@
 }
 .how_it_works article {
     text-align: center;
+    max-width: 317px;
 }
 .how_it_works article img{
     background: #EDEBF7;
@@ -47,21 +48,49 @@
     border-radius: 50%;
 }
 .how_it_works article h4 {
-    font-family: 'Roboto';
+    font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
     text-align: center;
     color: #202939;
-    padding: 31px 26px;
+    padding: 31px 0 26px;
 }
 .how_it_works article p{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     text-align: center;
     color: #4B5563;
+}
+
+@media only screen and (max-width: 429px) {
+    .how_it_works article {
+        min-width: 317px;
+        margin: auto;
+    }
+    .how_it_works_second{
+        display: block;
+    }
+    .how_it_works article:nth-child(2){
+        padding: 50px 0;
+    }
+    .how_it_works .how_it_works_first h3{
+        font-size: 40px;
+        line-height: 50px;
+    }
+
+}
+@media only screen and (max-width: 320px) {
+    .how_it_works article {
+        min-width: 296px;
+        margin: auto;
+    }
+    .how_it_works .how_it_works_first h3{
+        font-size: 36px;
+        line-height: 40px;
+    }
 }
