h4 add to main.css

--- a/css/vlad27171.css
+++ b/css/vlad27171.css
@@ -2,20 +2,6 @@
 .how_it_works{
     padding: 160px 0;
 }
-.how_it_works .how_it_works_first p:first-of-type{
-    margin: auto;
-    padding: 4px 12px;
-    background: #EDEBF7;
-    border-radius: 24px;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: #3C2769;
-    width: 124px;
-}
 .how_it_works .how_it_works_first h3{
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -26,7 +12,7 @@
     color: #202939;
     padding: 26px 0 28px 0;
 }
-.how_it_works .how_it_works_first p:last-of-type{
+.how_it_works .how_it_works_first p{
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
