--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,17 @@
 .w-100{
    width: 100%;
 }
+.how_it_works .how_it_works_first h4{
+    margin: auto;
+    padding: 4px 12px;
+    background: #EDEBF7;
+    border-radius: 24px;
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    color: #3C2769;
+    width: 124px;
+}
