--- a/css/w3zker.css
+++ b/css/w3zker.css
@@ -23,7 +23,7 @@
 }
 header .container{
     max-width: 1280px; 
-    margin: auto; 
+    margin: auto;
     box-sizing: border-box;
 }
 header .hidden_board{
@@ -62,18 +62,21 @@ header .menu {
     justify-content: center;
 }
 header .menu-buttons {
-    flex-shrink: 0;
+    position: absolute;
+    right: 21px;
+
     
 }
 header nav{
     padding: 24px 21px;
     display: flex;
+    position: relative;
 }
 header nav .menu li{
-margin-left: 32px;
+    margin-left: 32px;
 }
 header nav .menu-buttons li{
-margin-left: 8px;
+    margin-left: 8px;
 }
 header .link_cart{
     padding: 9px 21px;
@@ -161,7 +164,13 @@ header .burger_menu_wrapper button {
     top: 20px;
     right: 24px;
 }
-
+@media only screen and (max-width: 992px) {
+    header .menu {
+        flex-grow: 1;
+        display: flex;
+        justify-content: flex-start;
+    }
+}
 @media only screen and (max-width: 767px) {
     header .hidden_board {
         padding: 12px;
