--- a/css/tykhonova.o.o.css
+++ b/css/tykhonova.o.o.css
@@ -5,7 +5,7 @@
 }
 
 .main_banner p{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -21,7 +21,7 @@
 }
 
 .main_banner h5{
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -37,7 +37,7 @@
     background: #FFFFFF;
     border: 1px solid #CDD5DF;
     border-radius: 64px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
