--- a/css/tykhonova.o.o.css
+++ b/css/tykhonova.o.o.css
@@ -2,6 +2,7 @@
     background: #EDEBF7;
     padding: 78px 0 64px;
     position: relative;
+    overflow: hidden;
 }
 
 .main_banner p{
@@ -89,11 +90,148 @@
     color: #3C2769;
 }
 
-.main_banner .owl-item{
-    width: fit-content !important;
-}
-
 .main_banner .owl-carousel_1{
     width: 100vw;
     margin-top: 150px;
+}
+
+@media only screen and (max-width: 1312px) {
+    .main_banner .container{
+        padding: 0 16px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .main_banner p{
+        max-width: 448px;
+    }
+
+    .main_banner h1{
+        max-width: 400px;
+    }
+
+    .main_banner_a_btn{
+        margin-bottom: 179px;
+    }
+}
+
+@media only screen and (max-width: 960px) {
+    .main_banner p{
+        max-width: 360px;
+        margin-bottom: 32px;
+    }
+
+    .main_banner h1{
+        max-width: 360px;
+        margin-bottom: 24px;
+    }
+
+    .main_banner_a_btn{
+        margin-bottom: 179px;
+    }
+
+    .main_banner_a_btn{
+        margin-bottom: 179px;
+    }
+
+    .main_banner_a_logo{
+        margin-right: 16px;
+    }
+
+    .main_banner_a_logo img{
+        width: 96px;
+    }
+
+    .main_banner .owl-carousel_1{
+        margin-top: 64px;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .main_banner_img{
+        position: static;
+        height: 480px;
+        width: 100%;
+        border-bottom-right-radius: 32px;
+    }
+
+    .main_banner p{
+        max-width: 448px;
+        text-align: center;
+        margin: auto;
+        margin-bottom: 32px;
+    }
+
+    .main_banner h1{
+        max-width: 400px;
+        text-align: center;
+        margin: auto;
+        margin-bottom: 24px;
+    }
+
+    .main_banner_a_2btn{
+        display: flex;
+        justify-content: center;
+    }
+
+    .main_banner_a_btn{
+        margin: 0 8px 80px;
+    }
+
+    .main_banner h5{
+        text-align: center;
+        margin-bottom: 24px;
+    }
+
+    .main_banner_a_logos{
+        display: flex;
+        justify-content: center;
+    }
+
+    .main_banner_a_logo{
+        margin: 0 8px 64px;
+    }
+}
+
+@media only screen and (max-width: 428px) {
+    .main_banner{
+        padding: 64px 0 48px;
+    }
+
+    .main_banner_a_btn{
+        padding: 9px 21px;
+    }
+
+    .main_banner_a_logos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main_banner_a_logo{
+        margin: 0 0 24px;
+    }
+
+    .main_banner_a_logo:last-of-type{
+        margin: 0 0 64px;
+    }
+
+    .span_carousel_1{
+        display: inline-block;
+        padding: 17px 33px;
+        background: #FFFFFF;
+        border-radius: 64px;
+        margin-left: 16px;
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #3C2769;
+    }
+
+    .main_banner .owl-carousel_1{
+        width: 100vw;
+        margin-top: 48px;
+    }
 }
