--- a/css/vlad27171.css
+++ b/css/vlad27171.css
@@ -65,6 +65,7 @@
     .how_it_works article {
         max-width: 260px;
     }
+
     }
 
 @media only screen and (max-width: 429px) {
@@ -82,6 +83,10 @@
         font-size: 40px;
         line-height: 50px;
     }
+    .d-flex.space-between.how_it_works_second{
+        display: block;
+    }
+
 
 }
 @media only screen and (max-width: 321px) {
