--- a/css/monei9888.css
+++ b/css/monei9888.css
@@ -62,3 +62,333 @@
     border: 1px solid #CF4D74;
     color: #FFFFFF;
 }
+
+@media only screen and (max-width: 834px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{        
+        padding: 0 0 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 550px;
+        margin-right: 13px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }     
+}
+@media only screen and (max-width: 820px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{        
+        padding: 0 0 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 550px;
+        margin-right: 13px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }     
+}
+@media only screen and (max-width: 800px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{        
+        padding: 0 0 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 550px;
+        margin-right: 13px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }     
+}
+@media only screen and (max-width: 768px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{        
+        padding: 0 0 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 530px;
+        margin-right: 13px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }     
+}
+@media only screen and (max-width: 428px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{
+        display: block;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 530px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }
+    .best_selling_big_article {
+        margin-bottom: 24px;
+    }
+    .best_selling_big_text h3{    
+        font-size: 28px;
+        line-height: 1.31;   
+    }
+    .best_selling_big_text p{    
+        font-size: 14px;
+        line-height: 1.5;    
+    }    
+}
+@media only screen and (max-width: 414px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{
+        display: block;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 530px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }
+    .best_selling_big_article {
+        margin-bottom: 24px;
+    }
+    .best_selling_big_text h3{    
+        font-size: 28px;
+        line-height: 1.31;   
+    }
+    .best_selling_big_text p{    
+        font-size: 14px;
+        line-height: 1.5;    
+    }    
+}
+
+@media only screen and (max-width: 390px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{
+        display: block;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 500px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }
+    .best_selling_big_article {
+        margin-bottom: 24px;
+    }
+    .best_selling_big_text h3{    
+        font-size: 28px;
+        line-height: 1.31;   
+    }
+    .best_selling_big_text p{    
+        font-size: 14px;
+        line-height: 1.5;    
+    }    
+}
+
+@media only screen and (max-width: 375px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{
+        display: block;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 500px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }
+    .best_selling_big_article {
+        margin-bottom: 24px;
+    }
+    .best_selling_big_text h3{    
+        font-size: 28px;
+        line-height: 1.31;   
+    }
+    .best_selling_big_text p{    
+        font-size: 14px;
+        line-height: 1.5;    
+    }    
+}
+
+@media only screen and (max-width: 360px){
+    .best_selling_big{
+        padding: 0;
+    }
+    .best_selling_big_div{
+        display: block;
+        padding: 0 12px;
+        box-sizing: border-box;
+    }
+    .best_selling_big_article{
+        max-width: 100%;
+        height: 500px;
+    }
+    .best_selling_big_text{
+        padding: 24px 24px;
+    }
+    .best_selling_big_article img{
+        max-width: 100%;
+    }
+    .best_selling_big_text p {
+        max-width: 100%;
+    }
+    .best_selling_big_text h4 {
+        max-width: 100%;
+    }
+    .best_selling_big_article {
+        margin-bottom: 24px;
+    }
+    .best_selling_big_text h3{    
+        font-size: 28px;
+        line-height: 1.31;   
+    }
+    .best_selling_big_text p{    
+        font-size: 14px;
+        line-height: 1.5;    
+    }    
+}
+@media only screen and (max-width: 320px) {
+.best_selling_big{
+    padding: 0;
+}
+.best_selling_big_div{
+    display: block;
+    padding: 0 12px;
+    box-sizing: border-box;
+}
+.best_selling_big_article{
+    max-width: 100%;
+    height: 500px;
+}
+.best_selling_big_text{
+    padding: 24px 24px;
+}
+.best_selling_big_article img{
+    max-width: 100%;
+}
+.best_selling_big_text p {
+    max-width: 100%;
+}
+.best_selling_big_text h4 {
+    max-width: 100%;
+}
+.best_selling_big_article {
+    margin-bottom: 24px;
+}
+.best_selling_big_text h3{    
+    font-size: 28px;
+    line-height: 1.31;   
+}
+.best_selling_big_text p{    
+    font-size: 14px;
+    line-height: 1.5;    
+}    
+}
