changes adaptive; add hover btn;

--- a/css/tykhonova.o.o.css
+++ b/css/tykhonova.o.o.css
@@ -5,6 +5,11 @@
     overflow: hidden;
 }
 
+.main_banner h1{
+    margin-bottom: 28px;
+    max-width: 472px;
+}
+
 .main_banner p{
     font-family: 'Inter', sans-serif;
     font-style: normal;
@@ -14,11 +19,6 @@
     color: #3C2769;
     margin-bottom: 37px;
     max-width: 554px;
-}
-
-.main_banner h1{
-    margin-bottom: 28px;
-    max-width: 472px;
 }
 
 .main_banner h5{
@@ -46,13 +46,13 @@
     color: #202939;
     margin-right: 16px;
     margin-bottom: 209px;
+    transition: 0.5s;
 }
 
 .main_banner_a_btn:hover{
      background: #CF4D74;
      border: 1px solid #CF4D74;
      color: #FFFFFF;
-     transition: 0.5s;
  }
 
 .main_banner_a_btn:active{
@@ -74,6 +74,7 @@
     border-bottom-left-radius: 32px;
     background-image: url("../images/main_banner_img.jpg");
     background-size: cover;
+    background-position: center;
 }
 
 .span_carousel_1{
@@ -91,11 +92,10 @@
 }
 
 .main_banner .owl-carousel_1{
-    width: 100vw;
     margin-top: 150px;
 }
 
-@media only screen and (max-width: 1312px) {
+@media only screen and (max-width: 1366px) {
     .main_banner .container{
         padding: 0 16px;
     }
@@ -127,11 +127,7 @@
     }
 
     .main_banner_a_btn{
-        margin-bottom: 179px;
-    }
-
-    .main_banner_a_btn{
-        margin-bottom: 179px;
+        margin-bottom: 139px;
     }
 
     .main_banner_a_logo{
@@ -143,11 +139,11 @@
     }
 
     .main_banner .owl-carousel_1{
-        margin-top: 64px;
+        margin-top: 104px;
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
     .main_banner_img{
         position: static;
         height: 480px;
@@ -159,23 +155,24 @@
         max-width: 448px;
         text-align: center;
         margin: auto;
-        margin-bottom: 32px;
+        padding-bottom: 32px;
     }
 
     .main_banner h1{
         max-width: 400px;
         text-align: center;
         margin: auto;
-        margin-bottom: 24px;
+        padding-bottom: 24px;
     }
 
     .main_banner_a_2btn{
         display: flex;
         justify-content: center;
+        padding-bottom: 80px;
     }
 
     .main_banner_a_btn{
-        margin: 0 8px 80px;
+        margin: 0 8px;
     }
 
     .main_banner h5{
@@ -186,10 +183,19 @@
     .main_banner_a_logos{
         display: flex;
         justify-content: center;
+        padding-bottom: 64px;
     }
 
     .main_banner_a_logo{
-        margin: 0 8px 64px;
+        margin: 0 8px;
+    }
+
+    .main_banner .owl-carousel_1{
+        margin-top: 64px;
+    }
+
+    .main_banner_a_logo img{
+        width: 112px;
     }
 }
 
@@ -206,14 +212,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-bottom: 40px;
     }
 
     .main_banner_a_logo{
         margin: 0 0 24px;
-    }
-
-    .main_banner_a_logo:last-of-type{
-        margin: 0 0 64px;
     }
 
     .span_carousel_1{
@@ -231,7 +234,6 @@
     }
 
     .main_banner .owl-carousel_1{
-        width: 100vw;
         margin-top: 48px;
     }
 }
