--- a/css/mettal062.css
+++ b/css/mettal062.css
@@ -45,7 +45,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #202939;
-    transition: 0.5s
+    transition: 0.5s;
     margin-right: 16px;
 }
 .about_us .link_story:hover{
