--- a/css/mr.nerkararyna99.css
+++ b/css/mr.nerkararyna99.css
@@ -1,7 +1,10 @@
-.carusel article{
-    margin-right: 8px;
-    margin-left: 8px;
+.carusel{
+    max-width: 1400px;
+    margin: auto;
 }
-.carusel article{
-    margin-top: 127px;
+.carusel .owl-carousel_2 a{
+    max-width: 275px;
+    display: inline-block;
+    margin-left: 8px;
+    margin-right: 8px;
 }
