--- a/css/monei9888.css
+++ b/css/monei9888.css
@@ -21,7 +21,10 @@
 }
 .best_selling_big_text{
     text-align:center;
-    padding: 64px 48px;
+    padding: 64px 48px; 
+}
+.best_selling_big_text a{
+    display: inline-flex;
 }
 .best_selling_big_text h3{
     font-family: 'Roboto';
@@ -254,7 +257,7 @@
     }
     .best_selling_big_article{
         max-width: 100%;
-        height: 500px;
+        height: 530px;
     }
     .best_selling_big_text{
         padding: 24px 24px;
