--- a/css/masha.titova32.css
+++ b/css/masha.titova32.css
@@ -13,6 +13,9 @@
 .collection{
     text-align: left;
 }
+.collection_size{
+    margin: auto;
+}
 .face_skin h3, .body_skin h3{
     text-align: left;
     margin: 14px auto 28px auto;
