--- a/css/masha.titova32.css
+++ b/css/masha.titova32.css
@@ -5,10 +5,10 @@
     border-radius: 24px;
 }
 .face_skin img{
-    margin-right: 128px;
+    margin-right: 124px;
 }
 .body_skin img{
-    margin-left: 133px;
+    margin-left: 124px;
 }
 .collection{
     text-align: left;
@@ -105,17 +105,18 @@
         max-width: 794px;
         margin: auto;
     }
+    .face_skin a:first-of-type, .body_skin a:first-of-type{
+        padding: 17px 28px;
+    }
 }
 @media only screen and (max-width: 800px) {
     .collection .container {
         max-width: 760px;
     }
-
     .face_skin img, .body_skin img {
         max-width: 290px;
         height: 290px;
     }
-
     .face_skin h4, .body_skin h4 {
         padding: 2px 10px;
         font-size: 15px;
